[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ping-a2a"
version = "0.1.0"
description = "PING - Agent-to-Agent Messenger SDK"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "The House of Set"}
]
keywords = ["agent", "a2a", "messenger", "ai", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
crypto = ["pynacl>=1.5.0"]

[project.urls]
Homepage = "https://github.com/aetos53t/ping"
Repository = "https://github.com/aetos53t/ping"
Documentation = "https://github.com/aetos53t/ping#readme"
